CHAIN-220 adjust content
