# internal/ethapi/txpool_api.go
@@ -1,88 +1,88 @@
 package ethapi
 
 import (
-    "bitbucket.org/cpchain/chain/types"
-    "fmt"
-    "github.com/ethereum/go-ethereum/common/hexutil"
+	"bitbucket.org/cpchain/chain/types"
+	"fmt"
+	"github.com/ethereum/go-ethereum/common/hexutil"
 )
 
 // TransactionPoolReader offers and API for the transaction pool. It only operates on data that is non confidential.
 type TransactionPoolReader struct {
-    b Backend
+	b Backend
 }
 
 // NewTransactionPoolReader creates a new tx pool service that gives information about the transaction pool.
 func NewTransactionPoolReader(b Backend) *TransactionPoolReader {
-    return &TransactionPoolReader{b}
+	return &TransactionPoolReader{b}
 }
 
 // Content returns the transactions contained within the transaction pool.
 func (s *TransactionPoolReader) Content() map[string]map[string]map[string]*RPCTransaction {
-    content := map[string]map[string]map[string]*RPCTransaction{
-        "pending": make(map[string]map[string]*RPCTransaction),
-        "queued":  make(map[string]map[string]*RPCTransaction),
-    }
-    pending, queue := s.b.TxPoolContent()
+	content := map[string]map[string]map[string]*RPCTransaction{
+		"pending": make(map[string]map[string]*RPCTransaction),
+		"queued":  make(map[string]map[string]*RPCTransaction),
+	}
+	pending, queue := s.b.TxPoolContent()
 
-    // Flatten the pending transactions
-    for account, txs := range pending {
-        dump := make(map[string]*RPCTransaction)
-        for _, tx := range txs {
-            dump[fmt.Sprintf("%d", tx.Nonce())] = newRPCPendingTransaction(tx)
-        }
-        content["pending"][account.Hex()] = dump
-    }
-    // Flatten the queued transactions
-    for account, txs := range queue {
-        dump := make(map[string]*RPCTransaction)
-        for _, tx := range txs {
-            dump[fmt.Sprintf("%d", tx.Nonce())] = newRPCPendingTransaction(tx)
-        }
-        content["queued"][account.Hex()] = dump
-    }
-    return content
+	// Flatten the pending transactions
+	for account, txs := range pending {
+		dump := make(map[string]*RPCTransaction)
+		for _, tx := range txs {
+			dump[fmt.Sprintf("%d", tx.Nonce())] = newRPCPendingTransaction(tx)
+		}
+		content["pending"][account.Hex()] = dump
+	}
+	// Flatten the queued transactions
+	for account, txs := range queue {
+		dump := make(map[string]*RPCTransaction)
+		for _, tx := range txs {
+			dump[fmt.Sprintf("%d", tx.Nonce())] = newRPCPendingTransaction(tx)
+		}
+		content["queued"][account.Hex()] = dump
+	}
+	return content
 }
 
 // Status returns the number of pending and queued transaction in the pool.
 func (s *TransactionPoolReader) Status() map[string]hexutil.Uint {
-    pending, queue := s.b.Stats()
-    return map[string]hexutil.Uint{
-        "pending": hexutil.Uint(pending),
-        "queued":  hexutil.Uint(queue),
-    }
+	pending, queue := s.b.Stats()
+	return map[string]hexutil.Uint{
+		"pending": hexutil.Uint(pending),
+		"queued":  hexutil.Uint(queue),
+	}
 }
 
 // Inspect retrieves the content of the transaction pool and flattens it into an
 // easily inspectable list.
 func (s *TransactionPoolReader) Inspect() map[string]map[string]map[string]string {
-    content := map[string]map[string]map[string]string{
-        "pending": make(map[string]map[string]string),
-        "queued":  make(map[string]map[string]string),
-    }
-    pending, queue := s.b.TxPoolContent()
+	content := map[string]map[string]map[string]string{
+		"pending": make(map[string]map[string]string),
+		"queued":  make(map[string]map[string]string),
+	}
+	pending, queue := s.b.TxPoolContent()
 
-    // Define a formatter to flatten a transaction into a string
-    var format = func(tx *types.Transaction) string {
-        if to := tx.To(); to != nil {
-            return fmt.Sprintf("%s: %v wei + %v gas × %v wei", tx.To().Hex(), tx.Value(), tx.Gas(), tx.GasPrice())
-        }
-        return fmt.Sprintf("contract creation: %v wei + %v gas × %v wei", tx.Value(), tx.Gas(), tx.GasPrice())
-    }
-    // Flatten the pending transactions
-    for account, txs := range pending {
-        dump := make(map[string]string)
-        for _, tx := range txs {
-            dump[fmt.Sprintf("%d", tx.Nonce())] = format(tx)
-        }
-        content["pending"][account.Hex()] = dump
-    }
-    // Flatten the queued transactions
-    for account, txs := range queue {
-        dump := make(map[string]string)
-        for _, tx := range txs {
-            dump[fmt.Sprintf("%d", tx.Nonce())] = format(tx)
-        }
-        content["queued"][account.Hex()] = dump
-    }
-    return content
+	// Define a formatter to flatten a transaction into a string
+	var format = func(tx *types.Transaction) string {
+		if to := tx.To(); to != nil {
+			return fmt.Sprintf("%s: %v wei + %v gas × %v wei", tx.To().Hex(), tx.Value(), tx.Gas(), tx.GasPrice())
+		}
+		return fmt.Sprintf("contract creation: %v wei + %v gas × %v wei", tx.Value(), tx.Gas(), tx.GasPrice())
+	}
+	// Flatten the pending transactions
+	for account, txs := range pending {
+		dump := make(map[string]string)
+		for _, tx := range txs {
+			dump[fmt.Sprintf("%d", tx.Nonce())] = format(tx)
+		}
+		content["pending"][account.Hex()] = dump
+	}
+	// Flatten the queued transactions
+	for account, txs := range queue {
+		dump := make(map[string]string)
+		for _, tx := range txs {
+			dump[fmt.Sprintf("%d", tx.Nonce())] = format(tx)
+		}
+		content["queued"][account.Hex()] = dump
+	}
+	return content
 }
